<resources>
    <string name="app_name">L08PS</string>
    <string name="insert">INSERT</string>
    <string name="show_list">SHOW LIST</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="stars">Stars</string>
    <string name="enter_year_of_release_here">Enter Year of release here</string>
    <string name="year">Year</string>
    <string name="enter_singers_name_here">Enter singers\'name here</string>
    <string name="singers">Singers</string>
    <string name="enter_song_title_here">Enter song title here</string>
    <string name="song_title">Song Title</string>
</resources>